--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    //dit is een wijziging van een dag later
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
     <title>Nep huiswerkopdracht</title>
